Add all other inspectors.